<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--相对布局是根据父控件或者某个同级控件为基准来设定自己的位置-->
    <!--在父控件的中间=居中-->
    <Button
        android:id="@+id/button_mid_activity_relativelayoutdemo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/stirng_chinese_zhengzhong"
        />
    <!--父控件上边缘对齐+水平居中=上中-->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/string_chinese_shangzhong"
        />
    <!--父控件下边缘对齐+水平居中=下中-->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/string_chinese_xiazhong"
        />
    <!--父控件左边缘对齐+垂直居中=左中-->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:text="@string/string_chinese_zuozhong"
        />
    <!--父控件右边缘对齐+垂直居中=右中-->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:text="@string/string_chinese_youzhong"
        />
    <!--在正中的上方+与正中左右边缘对齐=正中靠上-->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_mid_activity_relativelayoutdemo"
        android:layout_alignLeft="@id/button_mid_activity_relativelayoutdemo"
        android:layout_alignRight="@id/button_mid_activity_relativelayoutdemo"
        android:text="@string/string_chinese_zhengzhongkaoshang"
        />
    <!--在正中的下方+与正中左右边缘对齐=正中靠下-->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_mid_activity_relativelayoutdemo"
        android:layout_alignLeft="@id/button_mid_activity_relativelayoutdemo"
        android:layout_alignRight="@id/button_mid_activity_relativelayoutdemo"
        android:text="@string/string_chinese_zhengzhongkaoxia"
        />
    <!--在正中的左方+与正中上下边缘对齐=正中靠左-->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/button_mid_activity_relativelayoutdemo"
        android:layout_alignTop="@id/button_mid_activity_relativelayoutdemo"
        android:layout_alignBottom="@id/button_mid_activity_relativelayoutdemo"
        android:text="@string/string_chinese_zhengzhongkaozuo"
        />
    <!--在正中的右方+与正中上下边缘对齐=正中靠右-->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/button_mid_activity_relativelayoutdemo"
        android:layout_alignTop="@id/button_mid_activity_relativelayoutdemo"
        android:layout_alignBottom="@id/button_mid_activity_relativelayoutdemo"
        android:text="@string/string_chinese_zhengzhongkaoyou"
        />
</RelativeLayout>
