<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--二维坐标，左上角为(0,0)。需要设置x，y坐标值-->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="10dp"
        android:layout_y="30dp"
        android:text="@string/string_en_button1"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="120dp"
        android:layout_y="110dp"
        android:text="@string/string_en_button2"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="255dp"
        android:layout_y="270dp"
        android:text="@string/string_en_button3"
        />
</AbsoluteLayout>
