<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <!--TableLayout中的控件独占一行-->
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_chinese_tablelayoutfirstrow"
            />
    </TableLayout>
    <!--1行3列的TableLayout,隐藏第二列，让第三列允许拉伸填充行-->
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:collapseColumns="1"
        android:stretchColumns="2"
        >
        <TableRow>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_chinese_putong"
             />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_chinese_putong"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_chinese_lashen"
            />
    </TableRow>
    </TableLayout>
    <!--1行3列的TableLayout,第二列允许被收缩，三列固定长度-->
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="1"
        >
        <TableRow>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_chinese_putong"
                />
            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/string_chinese_shousuo200dp"
                />
            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/string_chinese_200dp"
                />
        </TableRow>
    </TableLayout>
    <!--2行3列的TableLayout,第二行第一个控件占2列，让二行第二个控件在第4列-->
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1,2,3"
        >
        <TableRow>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_chinese_putong"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_chinese_putong"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_chinese_putong"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_chinese_putong"
                />
        </TableRow>
        <TableRow>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:text="@string/string_chinese_2col"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:text="@string/string_chinese_4col"
                />
        </TableRow>
    </TableLayout>
</LinearLayout>
