<?xml version="1.0" encoding="utf-8"?>
<!--可以设置背景与前景，背景必定在最底层，前景必定在最上层-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0000ff"
    android:foreground="@mipmap/ic_launcher"
    android:foregroundGravity="left|center_vertical"
    tools:context=".MainActivity"
    >
    <!--组件固定在左上方，后来的覆盖前面的元素。-->
    <TextView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="#ff0000"
        android:gravity="bottom|right"
        android:text="@string/string_chinese_hongse"
        />
    <TextView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="#00ff00"
        android:gravity="bottom|right"
        android:text="@string/string_chinese_lvse"
        />
    <TextView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="#ffff00"
        android:gravity="bottom|right"
        android:text="@string/string_chinese_huangse"
        />
</FrameLayout>
